css/style.css
* {
    box-sizing: border-box;
}

html, body {
  height: 100%;
}

body {
    font-family: Georgia, serif;
    margin: 0;
    font-size: 1em;
    color: #444;
}

h1, h2, h3, h4, h5 {
    font-family: 'Open Sans', helvetica, arial, sans-serif;
}

ul {
    margin: 0;
    padding: 0;
}

label {
    font-size: .8em;
    color: #777;
}

img {
    max-width: 100%;
}

p {
    line-height: 1.6;
}

a {
    color: #e93f2f;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.container {
    width: 90%;
    max-width: 900px;
    margin-left: auto;
    margin-right: auto;
    min-height: 100%;
    margin-bottom: -110px;
}

.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

.logo {
    width: 43px;
    margin: 0 auto;
    display: block;
    margin-bottom: 30px;

}

header {
    padding-top: 30px;
    margin-bottom: 10px;
    border-bottom: 1px solid #ccc;
    margin: 0 1% ;
}

section {
    overflow: hidden;
}

nav {
    text-align: center;
    margin-top: 12px;
    margin-bottom: 12px;
}

nav a {
    display: inline;
    margin-left: .85em;
    margin-right: .85em;
    margin-bottom: 1%;
    color: #777;
    text-decoration: none;
}

nav a:hover {
    color: #e93f2f;
    text-decoration: none;
}

nav a.active {
    color: #444;
}

.grid-unit {
    float: left;
    width:48%;
    margin: 2% 1%;
}

.grid-unit:nth-child(odd) {
    clear: left;
}

a.grid-unit {
    text-align: center;
    text-decoration: none;
    color: #5a5a5a;
    cursor: pointer;
}

/* Footer */
.container:after {
    content: "";
    display: block;
}
footer, .container:after {
    /* .push must be the same height as footer */
    height: 60px;
    margin-top: 50px;
}
footer {
    width: 92%;
    max-width:  900px;
    margin-left: auto;
    margin-right: auto;
}

.footer-links {
    border-top: solid 1px #ccc;
    margin: 0 1%;
    padding: 17px;
    text-align: center;
    color: #777;
}

.footer-links a {
    margin-left: 10px;
    margin-right: 10px;
    
}

@media screen and (min-width: 640px) {
    body {
        font-size: 1.1em;
    }
    
    nav {
        text-align: right;
        float: right;
    }
    
    nav a {
        display: inline;
        margin-left: 1.7em;
        margin-right: 1.7em;
    }
    
    h1, h2, h3, h4, h5 {
        font-family: 'Open Sans', sans-serif;
    }
    
    .logo {
        margin-left: 0px;
        float: left;
    }
    
    .grid-unit {
        width: 31.33333333%;
        margin: 2% 1%;
    }
    
    .grid-unit:nth-child(3n+1) {
        clear: left;
    }
    .grid-unit:nth-child(2n+1) {
        clear: none;
    }
    
    label {
        font-size: .9em;
    }
  
}

/* About page */
.about {
    margin: 2% 1%;
}

.hello {
    text-align: left;
    width: 100%;
    margin: 0 auto;
    
}

@media screen and (min-width: 640px) {
    .hello {
        text-align: center;
        width: 60%;
    }
}

/* Blog List */
.posts {
    padding: 0 1%;
}

.posts li {
    position: relative;
    list-style: none;
    padding: 30px 15px 30px 0px;
    border-bottom: 1px dotted #ccc;
    
}

.posts li:last-child {
    border-bottom: none;
    
}

a.post-link {
    font-family: 'Open Sans', helvetica, arial, sans-serif;
    font-weight: 600;
    color: #444;
    font-size: 1.4em;
    display: inline-block;
}

a.post-link:hover {
    color: #e93f2f;
    text-decoration: none;
}

.posts .post-date {
    color: #aaa;
    font-size: .9em;
}

/* Blog Post */
.post {
    width: 100%;
    color: #444;
}

.post-header .title {
    margin: 20px 0 0 0;
}

.post-header .meta {
    padding: 0;
    margin: 5px 0 8px 0;
    color: #aaa;
}

article {
   margin: 0 1% 1% 1%;
   font-size: 1em;
   line-height: 1.6;
   color: #555;
}

pre, code {
    background-color: #eee;
    padding: 4px 8px;
    border-radius: 3px;
}

.headerImage {
    padding: 1%;
    max-width: 100%;
}

@media screen and (min-width: 640px) {
    a.post-link {
        font-family: 'Open Sans', sans-serif;
    }
    
    .posts .post-date {
        position: absolute;
        top: 42%;
        right: 0;
    }
    .post {
        width: 75%;
        margin: 0 auto;
    }
    article {
        font-size: 1.2em;
    }

}

